💄 fix: order details flex gap

--- a/wp-content/themes/eyeconbeauty/scss/account/_orders.scss
+++ b/wp-content/themes/eyeconbeauty/scss/account/_orders.scss
@@ -65,3 +65,7 @@
 
   
 }
+
+.woocommerce-order-details {
+  @include d-flex(column, 1.666667rem);
+}
